Fix card section header alignment

--- a/landingpage/style.css
+++ b/landingpage/style.css
@@ -82,6 +82,7 @@ button {
     flex-direction: column;
     align-items: center;
     padding: 1vw 20vw 5vw;
+    text-align: center;
 }
 
 .card-section > h3 {
